[gd_scene load_steps=3 format=3 uid="uid://difb3gfpcltq2"]

[ext_resource type="Script" uid="uid://c2l1mgrbui1ey" path="res://keypad_ui_test.gd" id="1_fthml"]

[sub_resource type="LabelSettings" id="LabelSettings_e3cky"]
font_size = 30

[node name="KeypadUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fthml")

[node name="PanelC" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -81.0
offset_top = -81.0
offset_right = 81.0
offset_bottom = 81.0
grow_horizontal = 2
grow_vertical = 2

[node name="Margin" type="MarginContainer" parent="PanelC"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBox" type="VBoxContainer" parent="PanelC/Margin"]
layout_mode = 2

[node name="PanelC" type="PanelContainer" parent="PanelC/Margin/VBox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="CodeDisplay" type="Label" parent="PanelC/Margin/VBox/PanelC"]
layout_mode = 2
text = "0000"
label_settings = SubResource("LabelSettings_e3cky")
horizontal_alignment = 1

[node name="GridC" type="GridContainer" parent="PanelC/Margin/VBox"]
layout_mode = 2
columns = 3

[node name="Button7" type="Button" parent="PanelC/Margin/VBox/GridC"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
text = "7"

[node name="Button8" type="Button" parent="PanelC/Margin/VBox/GridC"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
text = "8"

[node name="Button9" type="Button" parent="PanelC/Margin/VBox/GridC"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
text = "9"

[node name="Button4" type="Button" parent="PanelC/Margin/VBox/GridC"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
text = "4"

[node name="Button5" type="Button" parent="PanelC/Margin/VBox/GridC"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
text = "5"

[node name="Button6" type="Button" parent="PanelC/Margin/VBox/GridC"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
text = "6"

[node name="Button1" type="Button" parent="PanelC/Margin/VBox/GridC"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
text = "1"

[node name="Button2" type="Button" parent="PanelC/Margin/VBox/GridC"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
text = "2"

[node name="Button3" type="Button" parent="PanelC/Margin/VBox/GridC"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
text = "3"

[node name="HBox" type="HBoxContainer" parent="PanelC/Margin/VBox"]
layout_mode = 2

[node name="Ok" type="Button" parent="PanelC/Margin/VBox/HBox"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
text = "Ok"

[node name="Button0" type="Button" parent="PanelC/Margin/VBox/HBox"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
text = "0"

[node name="Cancel" type="Button" parent="PanelC/Margin/VBox/HBox"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
text = "Cancel"
clip_text = true

[connection signal="pressed" from="PanelC/Margin/VBox/GridC/Button7" to="." method="_on_button_7_pressed"]
[connection signal="pressed" from="PanelC/Margin/VBox/GridC/Button8" to="." method="_on_button_8_pressed"]
[connection signal="pressed" from="PanelC/Margin/VBox/GridC/Button9" to="." method="_on_button_9_pressed"]
[connection signal="pressed" from="PanelC/Margin/VBox/GridC/Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="PanelC/Margin/VBox/GridC/Button5" to="." method="_on_button_5_pressed"]
[connection signal="pressed" from="PanelC/Margin/VBox/GridC/Button6" to="." method="_on_button_6_pressed"]
[connection signal="pressed" from="PanelC/Margin/VBox/GridC/Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="PanelC/Margin/VBox/GridC/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="PanelC/Margin/VBox/GridC/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="PanelC/Margin/VBox/HBox/Ok" to="." method="_on_ok_pressed"]
[connection signal="pressed" from="PanelC/Margin/VBox/HBox/Button0" to="." method="_on_button_0_pressed"]
[connection signal="pressed" from="PanelC/Margin/VBox/HBox/Cancel" to="." method="_on_cancel_pressed"]
